force-app/main/default/objects/Service_Repository__c/Service_Repository__c.object-meta.xml
<CustomObject>
    <label>Service Repository</label>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Service Repository Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Repositorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>