force-app/main/default/objects/Service_Repository__c/fields/Action_Fields__c.field-meta.xml
<CustomField>
    <fullName>Action_Fields__c</fullName>
    <label>Action Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>