force-app/main/default/objects/Service_Repository__c/fields/Custom_Label__c.field-meta.xml
<CustomField>
    <fullName>Custom_Label__c</fullName>
    <label>Custom Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>