force-app/main/default/objects/Service_Repository__c/fields/Group_By__c.field-meta.xml
<CustomField>
    <fullName>Group_By__c</fullName>
    <label>Group By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>