force-app/main/default/objects/Service_Repository__c/fields/Parent_Filter_Field__c.field-meta.xml
<CustomField>
    <fullName>Parent_Filter_Field__c</fullName>
    <label>Parent Filter Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>