force-app/main/default/objects/Service_Repository__c/fields/Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_Developer_Name__c</fullName>
    <label>Record Type Developer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>