force-app/main/default/objects/Service_Repository__c/fields/Service_Descriptor__c.field-meta.xml
<CustomField>
    <fullName>Service_Descriptor__c</fullName>
    <label>Service Descriptor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>