force-app/main/default/objects/Service_Repository__c/fields/Service_Objects__c.field-meta.xml
<CustomField>
    <fullName>Service_Objects__c</fullName>
    <label>Service Object(s)</label>
    <type>TextArea</type>
</CustomField>