force-app/main/default/objects/Service_Repository__c/fields/Service_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Request_Type__c</fullName>
    <label>Service Request Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>