force-app/main/default/objects/Service_Repository__c/fields/ServiceLabels__c.field-meta.xml
<CustomField>
    <fullName>ServiceLabels__c</fullName>
    <label>Service Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>