force-app/main/default/objects/Service_Repository__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Name__c</columns>
    <columns>Service_Objects__c</columns>
    <columns>Service_Request_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>