force-app/main/default/objects/Service_Repository__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Service_Name__c</columns>
    <columns>Enabled__c</columns>
    <columns>Service_Objects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>